--- a/https.css
+++ b/https.css
@@ -21,9 +21,22 @@ h1 {
     border-color: black;
 }
 
+#text-color-button {
+    color: black;
+    border: solid 1px;
+    border-color: black;
+}
+
 #color {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.pfp {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    content: url("chainRunner.png");
 }
 .cards {
     display: flex;
@@ -43,12 +56,6 @@ h1 {
     background-color: transparent;
     border-color: transparent;
     color: black;
-}
-
-.card img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
 }
 
 .foot {
