--- a/https.css
+++ b/https.css
@@ -33,11 +33,25 @@ h1 {
 }
 
 .pfp {
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
+    width: 65px;
+    height: 65px;
+    position: relative;
+    border-radius: 50px;
     content: url("chainRunner.png");
+    animation: rotation 7s infinite linear;
 }
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(359deg);
+    }
+    
+}
+
 .cards {
     display: flex;
     margin-left: auto;
