--- a/https.css
+++ b/https.css
@@ -55,9 +55,9 @@ h1 {
 .pfp-footer {
     width: 25px;
     height: 25px;
-    border-radius: 5px;
+    border-radius: 50px;
     content: url("httpsPixel.png");
-    
+    animation: rotation 7s infinite linear;
 }
 
 @keyframes rotation {
@@ -94,20 +94,52 @@ h1 {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: black;
+    background-color: transparent;
     color: white;
     text-align: center;
     height: 3%;
 }
 
+.left-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 3%;
+    background-color: transparent;
+    color: white;
+    text-align: center;
+    height: 100%;
+}
+
+.right-footer {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 3%;
+    background-color: transparent;
+    color: white;
+    text-align: center;
+    height: 100%;
+}
+
 :root {
     --width: 30px;
-    --x-speed: 6s;
-    --transition-speed: 2.2s;
+    --height: 110%;
+    --x-speed: 5s;
+    --y-speed: 6s;
+    --transition-speed: 1s;
 }
 
 .el {
     width: var(--width);
+}
+
+.ely {
+    height: var(--height);
+}
+
+.y {
+    animation: y var(--y-speed) linear infinite alternate;
 }
 
 .x {
@@ -119,3 +151,11 @@ h1 {
         transform: translateX(calc(100vw - var(--width)));
     }
 }
+
+@keyframes y {
+    100% {
+        transform: translateY(calc(100vw - var(--height)));
+    }
+}
+
+
