--- a/https.css
+++ b/https.css
@@ -3,39 +3,35 @@ body {
     text-align: center;
     background-color: white;
     vertical-align: middle;
-    animation: fade 3s ease forwards;
+    animation: fade 4s ease forwards;
 }
 
 h1 {
     color: black;
-    animation: fade 3s ease forwards;
+    
 }
 
 #dark {
     color: black;
     border: solid 1px;
     border-color: black;
-    animation: fade 3s ease forwards;
 }
 
 #color-button {
     color: black;
     border: solid 1px;
     border-color: black;
-    animation: fade 3s ease forwards;
 }
 
 #text-color-button {
     color: black;
     border: solid 1px;
     border-color: black;
-    animation: fade 3s ease forwards;
 }
 
 #color {
     padding-left: 5px;
     padding-right: 5px;
-    animation: fade 3s ease forwards;
 }
 
 #speed-up {
@@ -43,7 +39,7 @@ h1 {
     border: solid 1px;
     border-color: black;
     font-size: x-small;
-    animation: fade 3s ease forwards;
+    animation-delay: 3s;
 }
 
 #speed-down {
@@ -51,7 +47,6 @@ h1 {
     border: solid 1px;
     border-color: black;
     font-size: x-small;
-    animation: fade 3s ease forwards;
 }
 
 .pfp{
@@ -60,7 +55,7 @@ h1 {
     border-radius: 50px;
     content: url("httpsPixel.png");
     animation: rotation 7s infinite linear;
-    animation: fade 3s ease forwards;
+    animation: fade 3s forwards;
 }
 
 .pfp-footer {
@@ -69,7 +64,6 @@ h1 {
     border-radius: 50px;
     content: url("httpsPixel.png");
     animation: rotation 7s infinite linear;
-    animation: fade 3s ease forwards;
 }
 
 @keyframes rotation {
@@ -90,7 +84,7 @@ h1 {
     text-align: left;
     grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
     grid-gap: 100px;
-    animation: fade 3s ease forwards;
+    animation: 3s slide-right;
 }
 
 .card {
@@ -100,7 +94,6 @@ h1 {
     background-color: transparent;
     border-color: transparent;
     color: black;
-    animation: fade 3s ease forwards;
 }
 
 .footer {
@@ -112,7 +105,6 @@ h1 {
     color: white;
     text-align: center;
     height: 3%;
-    animation: fade 3s ease forwards;
 }
 
 .footer2 {
@@ -124,7 +116,6 @@ h1 {
     color: white;
     text-align: center;
     height: 3%;
-    animation: fade 3s ease forwards;
 }
 
 .footer2-github {
@@ -132,7 +123,6 @@ h1 {
     height: 35px;
     border-radius: 50px;
     content: url("gitHub1.png");
-    animation: fade 3s ease forwards;
 }
 
 .footer2-twitter {
@@ -140,7 +130,6 @@ h1 {
     height: 35px;
     border-radius: 50px;
     content: url("twitter.png");
-    animation: fade 3s ease forwards;
 }
 
 .pfp {
@@ -149,7 +138,6 @@ h1 {
     border-radius: 50px;
     content: url("httpsPixel.png");
     animation: rotation 7s infinite linear;
-    animation: fade 3s ease forwards;
 }
 
 :root {
@@ -177,5 +165,17 @@ h1 {
         opacity: 0;
     } to {
         opacity: 1;
+    }
+}
+
+@keyframes slide-right {
+    from {
+        margin-right: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-right: 0%;
+        width: 100%;
     }
 }
