--- a/https.css
+++ b/https.css
@@ -17,6 +17,12 @@ h1 {
     border-color: black;
 }
 
+#toggle-buttons {
+    color: black;
+    border: solid 1px;
+    border-color: black;
+}
+
 #color-button {
     color: black;
     border: solid 1px;
