--- a/https.css
+++ b/https.css
@@ -160,6 +160,14 @@ h1 {
     content: url("gitHub1.png");
 }
 
+.footer2-email {
+    width: 35px;
+    height: 35px;
+    border-radius: 60px;
+    content: url("emailIcon.png");
+    cursor: pointer;
+}
+
 .footer2-twitter {
     width: 35px;
     height: 35px;
@@ -213,4 +221,73 @@ h1 {
         margin-right: 0%;
         width: 100%;
     }
+}
+/* form css */
+
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
+}
+/* The popup form - hidden by default */
+.form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+/* Add styles to the form container */
+.form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+}
+/* Full-width input fields */
+.form-container input[type=text],
+.form-container input[type=email] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus,
+.form-container input[type=email]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+/* Set a style for the submit/login button */
+.form-container .btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+}
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+    background-color: red;
+}
+.form-container .send {
+    background-color: green;
+}
+/* Add some hover effects to buttons */
+.form-container .btn:hover,
+.open-button:hover {
+    opacity: 1;
 }
