--- a/https.css
+++ b/https.css
@@ -132,7 +132,7 @@ h1 {
     width: 35px;
     height: 35px;
     border-radius: 50px;
-    content: url("gitHub1.png");
+    content: url("gitHub.png");
 }
 
 .footer2-email {
